# Core_Banking_Simulator

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test.db
.github/workflows/: tests.yml
core_banking/: config.py  main.py
core_banking/api/: accounts.py  health.py  ledger.py  transactions.py
core_banking/models/: __init__.py  account.py  audit_log.py  base.py  customer.py  enums.py  ledger_account.py  ledger_entry.py  transaction.py
core_banking/schemas/: account.py  ledger.py  transaction.py
core_banking/services/: __init__.py  account_service.py  ledger_service.py  transaction_service.py
migrations/: env.py
migrations/versions/: 13b17e0e5277_create_customers_and_accounts_tables.py  3a49a333a279_create_ledger_accounts_and_ledger_.py  79dc1545d9f6_create_transactions_table.py  fb8434f71c30_create_audit_log_table.py
tests/: conftest.py
tests/api/: test_health.py  test_ledger.py
tests/services/: test_account_service.py  test_ledger_service.py  test_transaction_service.py
